syntax = "proto3";
option go_package = "octavius/pkg/protobuf";

message secret {
    string name=1;
    string description=2;
}
<<<<<<< HEAD

message Error{
    int64 errorCode=1;
    string errorMessage=2;
}

message ProcID{
    string value=1;
    string message=2;
}

message ProcList {
    repeated Proc procs = 1;
    Error error=2;
}

message RequestForCreateProc{
=======
message arg {
    string name=1;
    string description=2;
}
message env_vars {
    repeated secret secrets=1;
    repeated arg args=2;
}

message authorized_groups {
    repeated string authorized_groups=1;
}

message metadata {
>>>>>>> 8935e0f... Added proto file
    string name=1;
    string description=2;
    string image_name=3;
    env_vars env_vars=4;
    authorized_groups authorized_groups=5;
    string author=6;
    string contributors=7;
    string organization=8;
}

message client_info {
    string client_email=1;
    string acess_token=2;
}

message request_for_metadata_post {
    metadata metadata=1;
    client_info client_info=2;
}

message response {
    string status=1;
}

service ProcService{
<<<<<<< HEAD
    rpc CreateProc(RequestForCreateProc) returns (Proc);
    rpc ReadAllProcs(RequestForReadAllProcs) returns (ProcList);
=======
   rpc create_job(metadata) returns (response);
>>>>>>> 8935e0f... Added proto file
}